--- a/tomorrowland/index.html
+++ b/tomorrowland/index.html
@@ -7,7 +7,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-    	<title>Round 4 National Drag Racing Championship 2020 - Wellington Invasion Live Stream</title>
+    	<title>Tomorrowland 2022</title>
 <meta name="description" content="Round 4 National Drag Racing Championship 2020 - Wellington Invasion Live Stream, Round 4 National Drag Racing Championship 2020 - Wellington Invasion Live, Round 4 National Drag Racing Championship 2020 - Wellington Invasion Live online">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="image/favicon-logo.png" rel=icon type="image/x-icon"/>
