--- a/umpair222/index.html
+++ b/umpair222/index.html
@@ -11,7 +11,8 @@
 <meta name="description" content="umpair222, Round 4 National Drag Racing Championship 2020 - Wellington Invasion Live, Round 4 National Drag Racing Championship 2020 - Wellington Invasion Live online">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="image/favicon-logo.png" rel=icon type="image/x-icon"/>
-	<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
+	<link href="https://www.affforce.com/scripts/un981c6l?a_aid=c33b24bc&a_bid=e0f74467
+" rel="stylesheet" />
     <link href="//cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css" rel="stylesheet" />
     <link href="css/style.min.css" rel="stylesheet" />
 	<link rel="stylesheet" href="css/style.css">
