--- a/los-angeles/index.html
+++ b/los-angeles/index.html
@@ -7,8 +7,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
-    	<title>Round 4 National Drag Racing Championship 2020 - Wellington Invasion Live Stream</title>
-<meta name="description" content="Round 4 National Drag Racing Championship 2020 - Wellington Invasion Live Stream, Round 4 National Drag Racing Championship 2020 - Wellington Invasion Live, Round 4 National Drag Racing Championship 2020 - Wellington Invasion Live online">
+    	<title>Events in Los Angeles Live Stream</title>
+<meta name="description" content="Events in Los Angeles Live Stream, Events in Los Angeles Live, Events in Los Angeles Live online">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="image/favicon-logo.png" rel=icon type="image/x-icon"/>
 	<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
@@ -21,7 +21,8 @@
 	<link rel="stylesheet" href="css/mov.css">
 	<div class="row pagetop">
 		<div class="col-md-10 col-md-offset-1">
-<center><h3 class="text-center media-heading" style="color:yellow" ; style="margin-top: 2px;"><b><a href="https://bit.ly/35IxZmy">Watch- Round 4 National Drag Racing Championship 2020 - Wellington Invasion Live Stream</a></b></h3></center>
+<center><h3 class="text-center media-heading" style="color:yellow" ; style="margin-top: 2px;"><b><a href="https://www.affforce.com/scripts/un981c6l?a_aid=c33b24bc&a_bid=da11837b
+">Watch- Events in Los Angeles Live Stream</a></b></h3></center>
 
 		</div>
 	</div>
@@ -66,8 +67,10 @@
 
 	<div class="row cont_design">
 <div class="text-center" id="button-server">
-<a href="https://bit.ly/35IxZmy"><button class="btn btn-offer btn-lg btn-watch" data-click=""><span class="btn-bg"><span class="icon icon-control-play"></span></span> WATCH LIVE </button>
-<a href="https://bit.ly/35IxZmy"><button class="btn btn-offer btn-lg btn-download" data-click=""><span class="btn-bg"><span class="icon icon-control-play"></span></span> SIGNUP NOW </button>
+<a href="https://www.affforce.com/scripts/un981c6l?a_aid=c33b24bc&a_bid=da11837b
+"><button class="btn btn-offer btn-lg btn-watch" data-click=""><span class="btn-bg"><span class="icon icon-control-play"></span></span> WATCH LIVE </button>
+<a href="https://www.affforce.com/scripts/un981c6l?a_aid=c33b24bc&a_bid=da11837b
+"><button class="btn btn-offer btn-lg btn-download" data-click=""><span class="btn-bg"><span class="icon icon-control-play"></span></span> SIGNUP NOW </button>
 <center><img class="img-responsive" src="https://i.imgur.com/SN5rPPR.png"></center>
 		<div class="col-md-8 col-md-offset-2"> 
 		</div>
@@ -83,12 +86,14 @@
 	<div class="modal fade pagetop" id="modal-watch" tabindex="-1" role="dialog" aria-labelledby="modal-watch" aria-hidden="true">
 		<div class="page_login">
 			<center>
-				<h1 class="logo"><a href="https://bit.ly/35IxZmy"><img src="image/logo2.png" /></a></h1>
+				<h1 class="logo"><a href="https://www.affforce.com/scripts/un981c6l?a_aid=c33b24bc&a_bid=da11837b
+"><img src="image/logo2.png" /></a></h1>
 				<h3><font color="red"> Attention!</font>  <font color="#f2f2f2"> Login Required !!!</font></h3> 
 				<span>
-					<h3> <font color="#f2f2f2">You must create a free account to<br>Round 4 National Drag Racing Championship 2020 - Wellington Invasion Live Stream!</font></h3>
+					<h3> <font color="#f2f2f2">You must create a free account to<br>Events in Los Angeles Live Stream!</font></h3>
 				</span>
-				<a href="https://bit.ly/35IxZmy"> <button type="button" class="btn btn-success btn-lg" > CREATE MY ACCOUNT </button> </a>
+				<a href="https://www.affforce.com/scripts/un981c6l?a_aid=c33b24bc&a_bid=da11837b
+"> <button type="button" class="btn btn-success btn-lg" > CREATE MY ACCOUNT </button> </a>
 			</center>
 		</div>
 	</div>
