--- a/book-sale/index.html
+++ b/book-sale/index.html
@@ -7,8 +7,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
-    	<title>Round 4 National Drag Racing Championship 2020 - Wellington Invasion Live Stream</title>
-<meta name="description" content="Round 4 National Drag Racing Championship 2020 - Wellington Invasion Live Stream, Round 4 National Drag Racing Championship 2020 - Wellington Invasion Live, Round 4 National Drag Racing Championship 2020 - Wellington Invasion Live online">
+    	<title>BIG Book Sale Live Stream</title>
+<meta name="description" content="BIG Book Sale Live Stream, BIG Book Sale Live, BIG Book Sale Live online">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="image/favicon-logo.png" rel=icon type="image/x-icon"/>
 	<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
@@ -21,7 +21,7 @@
 	<link rel="stylesheet" href="css/mov.css">
 	<div class="row pagetop">
 		<div class="col-md-10 col-md-offset-1">
-<center><h3 class="text-center media-heading" style="color:yellow" ; style="margin-top: 2px;"><b><a href="https://bit.ly/35IxZmy">Watch- Round 4 National Drag Racing Championship 2020 - Wellington Invasion Live Stream</a></b></h3></center>
+<center><h3 class="text-center media-heading" style="color:yellow" ; style="margin-top: 2px;"><b><a href="https://bit.ly/35IxZmy">Watch- BIG Book Sale Live Stream</a></b></h3></center>
 
 		</div>
 	</div>
@@ -86,7 +86,7 @@
 				<h1 class="logo"><a href="https://bit.ly/35IxZmy"><img src="image/logo2.png" /></a></h1>
 				<h3><font color="red"> Attention!</font>  <font color="#f2f2f2"> Login Required !!!</font></h3> 
 				<span>
-					<h3> <font color="#f2f2f2">You must create a free account to<br>Round 4 National Drag Racing Championship 2020 - Wellington Invasion Live Stream!</font></h3>
+					<h3> <font color="#f2f2f2">You must create a free account to<br>BIG Book Sale Live Stream!</font></h3>
 				</span>
 				<a href="https://bit.ly/35IxZmy"> <button type="button" class="btn btn-success btn-lg" > CREATE MY ACCOUNT </button> </a>
 			</center>
