--- a/book-sale/index.html
+++ b/book-sale/index.html
@@ -21,7 +21,8 @@
 	<link rel="stylesheet" href="css/mov.css">
 	<div class="row pagetop">
 		<div class="col-md-10 col-md-offset-1">
-<center><h3 class="text-center media-heading" style="color:yellow" ; style="margin-top: 2px;"><b><a href="https://bit.ly/35IxZmy">Watch- BIG Book Sale Live Stream</a></b></h3></center>
+<center><h3 class="text-center media-heading" style="color:yellow" ; style="margin-top: 2px;"><b><a href="https://www.affforce.com/scripts/un981c6l?a_aid=c33b24bc&a_bid=da11837b
+">Watch- BIG Book Sale Live Stream</a></b></h3></center>
 
 		</div>
 	</div>
@@ -66,8 +67,10 @@
 
 	<div class="row cont_design">
 <div class="text-center" id="button-server">
-<a href="https://bit.ly/35IxZmy"><button class="btn btn-offer btn-lg btn-watch" data-click=""><span class="btn-bg"><span class="icon icon-control-play"></span></span> WATCH LIVE </button>
-<a href="https://bit.ly/35IxZmy"><button class="btn btn-offer btn-lg btn-download" data-click=""><span class="btn-bg"><span class="icon icon-control-play"></span></span> SIGNUP NOW </button>
+<a href="https://www.affforce.com/scripts/un981c6l?a_aid=c33b24bc&a_bid=da11837b
+"><button class="btn btn-offer btn-lg btn-watch" data-click=""><span class="btn-bg"><span class="icon icon-control-play"></span></span> WATCH LIVE </button>
+<a href="https://www.affforce.com/scripts/un981c6l?a_aid=c33b24bc&a_bid=da11837b
+"><button class="btn btn-offer btn-lg btn-download" data-click=""><span class="btn-bg"><span class="icon icon-control-play"></span></span> SIGNUP NOW </button>
 <center><img class="img-responsive" src="https://i.imgur.com/SN5rPPR.png"></center>
 		<div class="col-md-8 col-md-offset-2"> 
 		</div>
@@ -83,12 +86,14 @@
 	<div class="modal fade pagetop" id="modal-watch" tabindex="-1" role="dialog" aria-labelledby="modal-watch" aria-hidden="true">
 		<div class="page_login">
 			<center>
-				<h1 class="logo"><a href="https://bit.ly/35IxZmy"><img src="image/logo2.png" /></a></h1>
+				<h1 class="logo"><a href="https://www.affforce.com/scripts/un981c6l?a_aid=c33b24bc&a_bid=da11837b
+"><img src="image/logo2.png" /></a></h1>
 				<h3><font color="red"> Attention!</font>  <font color="#f2f2f2"> Login Required !!!</font></h3> 
 				<span>
 					<h3> <font color="#f2f2f2">You must create a free account to<br>BIG Book Sale Live Stream!</font></h3>
 				</span>
-				<a href="https://bit.ly/35IxZmy"> <button type="button" class="btn btn-success btn-lg" > CREATE MY ACCOUNT </button> </a>
+				<a href="https://www.affforce.com/scripts/un981c6l?a_aid=c33b24bc&a_bid=da11837b
+"> <button type="button" class="btn btn-success btn-lg" > CREATE MY ACCOUNT </button> </a>
 			</center>
 		</div>
 	</div>
